--- a/scss/components/layout/_header.scss
+++ b/scss/components/layout/_header.scss
@@ -7,9 +7,13 @@
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  height: 684px;
+  height: 600px;
 }
 
 .h1-container {
-  height: 70%;
+  height: 60%;
+}
+
+.second-menu {
+  padding-left: 0px;
 }
