--- a/css/style.css
+++ b/css/style.css
@@ -14174,14 +14174,46 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+/* VARIABLES */
+/* TYPOGRAPHY */
+@font-face {
+  font-family: NunitoSans-semibold;
+  src: url(../recursos/typo/Nunito_Sans/NunitoSans-SemiBold.ttf);
+}
+@font-face {
+  font-family: NunitoSans-bold;
+  src: url(../recursos/typo/Nunito_Sans/NunitoSans-Bold.ttf);
+}
+@font-face {
+  font-family: NunitoSans-regular;
+  src: url(../recursos/typo/Nunito_Sans/NunitoSans-Regular.ttf);
+}
 .generic-margin-container {
   width: 60%;
   margin-right: auto;
   margin-left: auto;
 }
 
-.logo {
-  width: 200px;
+.container {
+  padding-right: 0;
+  padding-left: 0;
+}
+
+.row {
+  padding-right: 0;
+  padding-left: 0;
+}
+
+.regular {
+  font-family: NunitoSans-regular;
+}
+
+.bold {
+  font-family: NunitoSans-bold;
+}
+
+.semibold {
+  font-family: NunitoSans-semibold;
 }
 
 /* VARIABLES */
@@ -14192,9 +14224,59 @@ textarea.form-control-lg {
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  height: 684px;
+  height: 600px;
 }
 
 .h1-container {
-  height: 70%;
+  height: 60%;
+}
+
+.second-menu {
+  padding-left: 0;
+}
+
+.cards-section header {
+  height: 150px;
+}
+.cards-section header .row {
+  width: 100%;
+}
+.cards-section header .row .col {
+  position: relative;
+  top: 30px;
+}
+.cards-section .cards-container {
+  height: 320px;
+}
+
+/* VARIABLES */
+/* TYPOGRAPHY */
+.upper-footer {
+  height: 300px;
+  background-color: #020415;
+  font-size: 1rem !important;
+  font-family: NunitoSans-regular;
+  padding-top: 3.4375rem;
+}
+.upper-footer .social-media-icon {
+  width: 25px;
+}
+.upper-footer .row .col:nth-child(2) {
+  position: relative;
+  left: 60px;
+}
+.upper-footer .row .col:nth-child(4) {
+  position: relative;
+  left: 60px;
+}
+.upper-footer .row .col:nth-child(4) a {
+  display: block;
+}
+
+.lower-footer {
+  height: 34px;
+  background-color: #5EA8E9;
+}
+.lower-footer .row {
+  width: 100%;
 }
