--- a/scss/components/layout/_layout.scss
+++ b/scss/components/layout/_layout.scss
@@ -17,7 +17,16 @@
 }
 
 .generic-margin-container {
-  width: 60%;
+  width: 100%;
+
+  @media screen and (min-width: $md) {
+    width: 80%;
+  }
+
+  @media screen and (min-width: $xl) {
+    width: 60%;
+  }
+
   margin-right:auto;
   margin-left:auto;
 }
