--- a/scss/components/cards/_cards-container.scss
+++ b/scss/components/cards/_cards-container.scss
@@ -1,4 +1,6 @@
 
+@use "variables";
+
 .cards-section {
     header {
         height: 150px;
@@ -9,9 +11,20 @@
                 top: 30px;
             }
         }
+
+        h4 {
+            font-size: 30px;
+            color: #5EA8E9;
+        }
+
+        h5 {
+            font-size: 26px;
+        }
     }
 
     .cards-container {
-        height: 320px;
+        @media screen and (min-width: $lg) {
+            height: 320px;
+        }
     }
 }
