--- a/scss/components/footer/_footer.scss
+++ b/scss/components/footer/_footer.scss
@@ -1,3 +1,4 @@
+
 @use "variables";
 
 .upper-footer {
@@ -13,12 +14,16 @@
 
   .row {
     .col:nth-child(2) {
-      position: relative;
-      left: 60px;
+      @media screen and (min-width: $lg) {
+        position: relative;
+        left: 60px;
+      }
     }
     .col:nth-child(4) {
-      position: relative;
-      left: 60px;
+      @media screen and (min-width: $lg) {
+        position: relative;
+        left: 60px;
+      }
       a {
         display: block;
       }
